--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,10 @@
         android:background="#dadada"
         android:padding="8dp"
         android:text="View Data"/>
+
+    <Button
+        android:id="@+id/btn_schat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="chat" />
 </LinearLayout>
