--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -12,7 +12,7 @@
         android:layout_height="45dp"
         android:fontFamily="sans-serif-medium"
         android:padding="5dp"
-        android:text="Chat"
+        android:text="Diabetic chat"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_menu"
         app:layout_constraintStart_toStartOf="parent"
