--- a/app/src/main/res/layout/item_send_msg.xml
+++ b/app/src/main/res/layout/item_send_msg.xml
@@ -11,23 +11,30 @@
             type="com.example.td_test_2.database.entity.message.Message" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="10dp"
-        android:background="#00BCD4"
-        android:padding="10dp">
+        app:cardCornerRadius="5dp">
 
-        <TextView
-            android:id="@+id/tv_send"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{message.setences}"
-            android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="test" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:background="#00BCD4"
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/tv_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{message.setences}"
+                android:textColor="#FFFFFF"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="test" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
 </layout>
