--- a/app/src/main/res/layout/item_receive.xml
+++ b/app/src/main/res/layout/item_receive.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
-        android:background="#2196F3"
+        android:background="#E7E7E7"
         android:padding="10dp">
 
         <TextView
@@ -24,7 +24,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@{message.setences}"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
+            android:textSize="17sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
