--- a/app/src/main/res/layout/item_send_msg.xml
+++ b/app/src/main/res/layout/item_send_msg.xml
@@ -21,7 +21,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00BCD4"
+            android:background="#CBCACA"
             android:padding="10dp">
 
             <TextView
@@ -29,7 +29,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{message.setences}"
-                android:textColor="#FFFFFF"
+                android:textColor="#010101"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
