--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentasion.chatactivity.ChatActivity">
+    android:id="@+id/fragment_chat"
+    tools:context=".presentasion.chatactivity.ChatFragment">
 
     <TextView
         android:id="@+id/textView2"
@@ -57,6 +59,7 @@
         android:id="@+id/rv_search"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_marginBottom="80dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/rv_chat"
         app:layout_constraintEnd_toEndOf="@+id/rv_chat"
