--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,7 +14,7 @@
         android:layout_height="45dp"
         android:fontFamily="sans-serif-medium"
         android:padding="5dp"
-        android:text="Diabetic chat"
+        android:text="chat"
         android:textSize="25sp"
         app:layout_constraintEnd_toStartOf="@+id/btn_menu"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
-        android:background="#00BCD4"
+        android:background="#B7C4CF"
         android:padding="10dp"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -48,7 +48,7 @@
         android:id="@+id/btn_insert"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="#2196F3"
+        android:background="#9DC08B"
         android:text="kirim"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/et_insert_chat"
